.deployment/k8s-manifest/base/services/finweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finweb-service
spec:
  selector:
    app: fin-system-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
